assert-struct/tests/snapshots/slices__slice_element_mismatch.snap
---
source: assert-struct/tests/slices.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/slices_errors/slice_element_mismatch.rs:21:27
   |
21 |             items: [1, 2, 4],  // Last element wrong
   |                           ^ got 3
22 |             names: ["a", "c"], // Second element wrong
   |                          ^^^ got "b"
